--- a/mctdh_intro.tex
+++ b/mctdh_intro.tex
@@ -260,7 +260,7 @@ i\dot{\varphi}^{(\kappa)}_j &= (1 - \textcolor{blue}{\hat{P}^{(\kappa)}})\sum_{k
 \textcolor{red}{\Phi_J = \prod_{\kappa=1}^f\varphi_{j_{\kappa}}^{(\kappa)}}
 \end{equation}
 \begin{equation}
-\textcolor{cyan}{\rho_{kl}^{(\kappa)} = \braket{\Psi_k^{(\kappa)}|\Psi_l^{(\kappa)}}  = \sum_{J^{\kappa}}A_{J_{k}^{\kappa}}^*A_{J_{l}^{\kappa}}^*} \quad \textcolor{magenta}{\braket{\hat{H}}_{kl}^{(\kappa)} = \braket{\Psi_k^{(\kappa)}|\hat{H}|\Psi_l^{(\kappa)}}}
+\textcolor{cyan}{\rho_{kl}^{(\kappa)} = \braket{\Psi_k^{(\kappa)}|\Psi_l^{(\kappa)}}  = \sum_{J^{\kappa}}A_{J_{k}^{\kappa}}^*A_{J_{l}^{\kappa}}} \quad \textcolor{magenta}{\braket{\hat{H}}_{kl}^{(\kappa)} = \braket{\Psi_k^{(\kappa)}|\hat{H}|\Psi_l^{(\kappa)}}}
 \end{equation}
 \begin{equation}
 	\textcolor{blue}{\hat{P}^{(\kappa)} = \sum_{j=1}^{n_{\kappa}}\ket{\varphi_j^{(\kappa)}}\bra{\varphi_j^{(\kappa)}}}
