--- a/mctdh_intro.tex
+++ b/mctdh_intro.tex
@@ -619,7 +619,7 @@ This is a fully analytical SOP form, differentiable \emph{ad infinitum}, and tha
 \vspace{.5cm}
 
   \begin{minipage}{.6\linewidth}
-\small{Meyer, H.D. ``Introduction to MCTDH.'' Lecture Notes (2011)}
+\small{Meyer, H.D. (\LaTeX{} version by Pel\'aez, D.) ``Introduction to MCTDH.'' Lecture Notes (2011)}
  \end{minipage}
  \hspace{1cm}
    \begin{minipage}{.1\linewidth}
